# bibliothequeconsole

./: CMakeLists.txt  readme.md
data/: emprunts.txt  livres.txt  utilisateurs.txt
include/: emprunts.h  fichiers.h  livres.h  stats.h  util.h  utilisateurs.h
src/: emprunts.c  fichiers.c  livres.c  main.c  stats.c  util.c  utilisateurs.c
